--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,6 +3,10 @@
     border-radius: 0rem 0rem .5rem .5rem;
 }
 
+h1 {
+    margin: 0;
+}
+
 .header {
     display: flex;
     align-items: center;
@@ -25,8 +29,12 @@
     width: 100%;
 }
 
-.titulo > h1 {
-    margin: 0;
+.titulo-nao-logado {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
 }
 
 .menu-tarefas {
