--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="header">
-        <div class="titulo">
+        <div class="titulo-nao-logado" *ngIf="!logado()">
+            <h1>todoApp</h1>
+        </div>
+        <div class="titulo" *ngIf="logado()">
             <h1>todoApp</h1>
             <mat-divider class="responsive-divider"></mat-divider>
             <div class="menu">
