refatorando componente adicionar-tarefa dialog

--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -1,24 +1,20 @@
-<mat-card class="card">
-    <div class="header">
-        <mat-card-title *ngIf="!tarefa.id">Adicionar tarefa</mat-card-title>
-        <mat-card-title *ngIf="tarefa.id">Editar tarefa #{{data.id}}</mat-card-title>
-        <mat-divider></mat-divider>
-    </div>
-    <form>
-        <mat-form-field appearance="outline" color="accent" style="width: 100%">
-            <mat-label>Título</mat-label>
-            <input 
-                type="text" 
-                [(ngModel)]="tarefa.titulo"                
-                name="titulo"
-                [formControl]="titulo"
-                matInput 
-                placeholder="Digite o título da Tarefa" 
-                maxlength="50"
-                text="data.titulo"
-                >
-            <mat-icon color="primary" matSuffix>title</mat-icon>
-        </mat-form-field>
-        <button (click)="salvar()" [disabled]="!validaCampos()" mat-raised-button color="primary">Enviar</button>
-    </form>   
-</mat-card> 
+<div class="header">
+    <h1 mat-dialog-title *ngIf="!data.id">Adicionar tarefa</h1>
+    <h1 mat-dialog-title *ngIf="data.id">Editar tarefa #{{data.id}}</h1>
+    <mat-divider></mat-divider>
+</div>
+<div mat-dialog-content>
+    <mat-form-field appearance="outline" color="accent" style="width: 100%">
+        <mat-label>Título</mat-label>
+        <input 
+            matInput 
+            [(ngModel)]="data.titulo"                
+            placeholder="Digite o título da Tarefa" 
+            maxlength="50"
+            text="data.titulo"
+            >
+        <mat-icon color="primary" matSuffix>title</mat-icon>
+    </mat-form-field>
+</div>
+<button mat-raised-button color="primary" [mat-dialog-close]="data.titulo" [disabled]="!validaCampos()"  >Enviar</button>
+<button mat-button color="primary" (click)="onNoClick()">Cancelar</button>
