--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="titulo">
-        <h1>Bem-vindo, faça o login para continuar</h1>
+        <h1>Bem-vindo</h1>
     </div>
-    <mat-divider></mat-divider>
     <button mat-raised-button color="accent" class="btn-login" (click)="login()">Login</button>
+    <mat-divider></mat-divider>
     <div class="cadastro-link">
         <span>
-            Ou <a href="#">Cadastre-se</a>.
+            Ou <a routerLink="/cadastro">Cadastre-se</a>.
         </span>
     </div>
 </div>
