--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
                 </div>
                 <mat-menu #menu="matMenu" xPosition="before">
                     <a mat-menu-item routerLink="/perfil">
-                      <mat-icon>edit</mat-icon>
+                      <mat-icon color="accent">edit</mat-icon>
                       <span>Perfil</span>
                     </a>
                     <button mat-menu-item (click)="logout()">
