--- a/src/app/components/tarefa/tarefa.component.html
+++ b/src/app/components/tarefa/tarefa.component.html
@@ -21,7 +21,7 @@
                     <div *ngFor="let t of TAREFAS; let i = index">
                         <mat-card class="tarefa-card" [@finishedBorder]="t.concluida" *ngIf="validarData(t.dataCriacao!, dt.data)">
                             <div class="id">
-                                <mat-card-title>#{{t.id}} {{t.titulo}}</mat-card-title>
+                                <mat-card-title>{{t.titulo}}</mat-card-title>
                                 <mat-card-subtitle style="margin: 0;">{{ t.dataCriacao |  date: 'EEE, dd/MM/yyyy, HH:mm':'':'pt-BR'}}</mat-card-subtitle>
                                 <mat-divider class="responsive-divider"></mat-divider>
 
