--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
                 </div>
                 
                 <div class="perfil">
-                    {{usuarioLogado.primeiroNome}}
+                    {{headerService.usuarioLogado.nome}}
                     <button mat-icon-button color="accent" matTooltip="Você" [matMenuTriggerFor]="menu">
                         <mat-icon>person</mat-icon>
                     </button>
