--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,32 +1,30 @@
 <div class="container">
-    <div class="data-adicionar">
-        <div class="titulo">
-            <h1>Seus Dados</h1>            
-        </div>
-        <mat-divider style="margin: 1rem 0rem;"></mat-divider>
+    <div class="titulo">
+        <h1>Seus Dados</h1>            
+    </div>
+    <form #usuarioEditar="ngForm" class="dados" (submit)="editar(usuarioEditar)">
+        
+        <mat-form-field class="dado" color="accent" appearance="outline">
+            <mat-icon matSuffix class="icon-perfil">person</mat-icon>
+            <mat-label>Nome</mat-label>
+            <input matInput [formControl]="nome" id="nome" style="color: var(--secondary-text-dark);">
+        </mat-form-field>
+        <mat-divider></mat-divider>
 
-    </div>
-    <div class="dados">
-        <div class="dado">
-            <div class="label">
-                <mat-icon class="icon-perfil">person</mat-icon>
-                <h3>Nome</h3>
-            </div>
-            <h3>{{usuarioLogado.nome}}</h3>
-        </div>
-        <div class="dado">
-            <div class="label">
-                <mat-icon class="icon-perfil">email</mat-icon>
-                <h3>E-mail</h3>
-            </div>
-            <h3>{{usuarioLogado.email}}</h3>
-        </div>
-        <div class="dado">
-            <div class="label">
-                <mat-icon class="icon-perfil">info</mat-icon>
-                <h3>Tipo</h3>
-            </div>
-            <h3>{{usuarioLogado.tipo}}</h3>
-        </div>
-    </div>
+        <mat-form-field class="dado" color="accent" appearance="outline">
+            <mat-icon matSuffix class="icon-perfil">email</mat-icon>
+            <mat-label>E-mail</mat-label>
+            <input matInput [formControl]="email" id="email" style="color: var(--secondary-text-dark);">
+        </mat-form-field>
+        <mat-divider></mat-divider>
+
+        <mat-form-field class="dado" color="accent" appearance="outline">
+            <mat-icon matSuffix class="icon-perfil">info</mat-icon>
+            <mat-label>Role</mat-label>
+            <input matInput disabled="true" [value]="headerService.usuarioLogado.tipo" id="nome" style="color: var(--secondary-text-dark);" >
+        </mat-form-field>
+
+        <mat-divider></mat-divider>
+        <button [disabled]="!isValid()" type="submit" mat-raised-button color="accent">Enviar</button>
+    </form>
 </div>
