implementando componente de alteração de senha

--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -26,5 +26,6 @@
 
         <mat-divider></mat-divider>
         <button [disabled]="!isValid()" type="submit" mat-raised-button color="accent">Enviar</button>
+        <a routerLink="/senha">Alterar senha</a>
     </form>
 </div>
