--- a/src/app/components/tarefa/tarefa.component.css
+++ b/src/app/components/tarefa/tarefa.component.css
@@ -27,23 +27,19 @@
 }
 
 .grupo-tarefas-div {
-    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     background-color: var(--dark-dark);
+    padding: 1rem;
     border-radius: .5rem;
 }
 
-.tarefas-div {
-    margin-top: 1rem;
-}
-
 .tarefa-card {
-    margin: 1rem;
     min-height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 1rem 0rem 0rem 0rem;
-    border: none;
     box-shadow: none;
 }
 
