adicionar type password nos inputs de alterar senha

--- a/src/app/components/perfil/senha/senha.component.html
+++ b/src/app/components/perfil/senha/senha.component.html
@@ -6,7 +6,7 @@
         
         <mat-form-field class="dado" color="accent" appearance="outline">
             <mat-label>Senha atual</mat-label>
-            <input matInput formControlName="senhaAtual" [errorStateMatcher]="senhaAtualMatcher" id="senhaAtual" style="color: var(--secondary-text-dark);">
+            <input matInput formControlName="senhaAtual" type="password" [errorStateMatcher]="senhaAtualMatcher" id="senhaAtual" style="color: var(--secondary-text-dark);">
             <mat-icon matSuffix class="icon-perfil">key</mat-icon>
             <mat-error *ngIf="senhaGroup.hasError('required', 'senhaAtual')">Senha atual é obrigatória.</mat-error>
         </mat-form-field>
@@ -14,14 +14,14 @@
         <mat-divider></mat-divider>
         <mat-form-field class="dado" color="accent" appearance="outline">
             <mat-label>Nova senha</mat-label>
-            <input matInput formControlName="senhaNova" [errorStateMatcher]="senhaNovaMatcher" id="senhaNova" style="color: var(--secondary-text-dark);">
+            <input matInput formControlName="senhaNova" type="password" [errorStateMatcher]="senhaNovaMatcher" id="senhaNova" style="color: var(--secondary-text-dark);">
             <mat-icon matSuffix class="icon-perfil">key</mat-icon>
             <mat-error *ngIf="senhaGroup.invalid">{{getErroSenhaNovaMessage()}}</mat-error>
         </mat-form-field>
         
         <mat-form-field class="dado" color="accent" appearance="outline">
             <mat-label>Confirme a nova senha</mat-label>
-            <input matInput formControlName="senhaConfirmacao" [errorStateMatcher]="senhaConfirmacaoMatcher" id="senhaConfirmacao" style="color: var(--secondary-text-dark);">
+            <input matInput formControlName="senhaConfirmacao" type="password" [errorStateMatcher]="senhaConfirmacaoMatcher" id="senhaConfirmacao" style="color: var(--secondary-text-dark);">
             <mat-icon matSuffix class="icon-perfil">key</mat-icon>
             <mat-error *ngIf="senhaGroup.invalid">{{getErroSenhaNovaConfirmacaoMessage()}}</mat-error>
         </mat-form-field>
